# python-repo-template

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml
tests/: test_example.py
